tests/snapshots/basic__align_content_center.snap
---
source: tests/basic.rs
expression: tsiv.last_screen()
---
captured piece:
x01234567890123456789x
0                    |
1                    |
2                    |
3                    |
4|Ape||Bat||Cat||Dog||
5|Elk||Fly||Gnu|     |
6                    |
7                    |
8                    |
9                    |
x--------------------x

