tests/snapshots/basic__align_content_flexend.snap
---
source: tests/basic.rs
expression: tsiv.last_screen()
---
captured piece:
x01234567890123456789x
0                    |
1                    |
2                    |
3                    |
4                    |
5                    |
6                    |
7                    |
8|Ape||Bat||Cat||Dog||
9|Elk||Fly||Gnu|     |
x--------------------x

