tests/snapshots/basic__align_content_space_around.snap
---
source: tests/basic.rs
expression: tsiv.last_screen()
---
captured piece:
x01234567890123456789x
0                    |
1                    |
2|Ape||Bat||Cat||Dog||
3                    |
4                    |
5                    |
6                    |
7|Elk||Fly||Gnu|     |
8                    |
9                    |
x--------------------x

