tests/snapshots/basic__align_content_space_between.snap
---
source: tests/basic.rs
expression: tsiv.last_screen()
---
captured piece:
x01234567890123456789x
0|Ape||Bat||Cat||Dog||
1                    |
2                    |
3                    |
4                    |
5                    |
6                    |
7                    |
8                    |
9|Elk||Fly||Gnu|     |
x--------------------x

